# fortios-xutils

./: .travis.yml  MANIFEST.in  NEWS  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  api.rst  cli.rst  conf.py  index.rst  introduction.rst
examples/: web_app_demo.py
pkg/: package.spec.in
src/fortios_xutils/: __init__.py  api.py  cli.py  finder.py  firewall.py  netutils.py  network.py  parser.py  utils.py
tests/: api.py  cli.py  common.py  finder.py  firewall.py  lib.py  netutils.py  network.py  parser.py  releng.bats  requirements.txt  utils.py
tests/logs/: 0.txt  1.txt
tests/res/: foritgate_cli_show_sample_0.txt  foritgate_cli_show_sample_1.txt
tests/res/networks/: graph.yml
tests/res/parsed/fortigate-01/: all.json  networks.yml
tests/res/parsed/fortigate-02/: all.json  networks.yml
tests/res/show_configs/: fortigate_cli_show_sample_0.txt  fortigate_cli_show_sample_1.txt
tests/res/try_ac_load/: 10_mapping_object_shift-jis_ok.json  10_mapping_object_utf-8_ok.json  20_sequence_objects_shift-jis_ok.json  20_sequence_objects_utf-8_ok.json
