# .. seealso:: https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

# .. seealso:: https://wheel.readthedocs.io/en/stable/
[bdist_wheel]
universal = 1

[aliases]
dists = clean sdist bdist_wheel

[metadata]
name = fortios_xutils
description = Very experimental miscellaneous and extra utilities for fortios
long_description = file: README.rst
author = Satoru SATOH
author_email = satoru.satoh@gmail.com
maintainer = Satoru SATOH
maintainer_email = satoru.satoh@gmail.com
license = MIT
url = https://github.com/ssato/fortios-xutils
project_urls =
    CI: Travis = https://travis-ci.org/ssato/fortios-xutils
    Download = https://pypi.org/project/anyconfig-fortios-backend/
    Download RPMs = https://copr.fedoraproject.org/coprs/ssato/extras/
    Bug Tracker = https://github.com/ssato/fortios-xutils/issues
    Source = https://github.com/ssato/fortios-xutils
platforms =
    any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:

# minimum dependencies.
install_requires =
    PyYAML
    anyconfig
    anyconfig-fortios-backend
    click
    jmespath
    netaddr
    networkx
    pandas

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    fortios_xutils = fortios_xutils.cli:main

[tool:pytest]
addopts = --doctest-modules

python_files = *.py
testpaths =
    tests
    src

# vim:sw=4:ts=4:et:
